testData/annotation.semantic/FixPackage.hx
<error descr="Package name 'test.pack' does not correspond to the file path ''">package test.pack;</error>